# aegisfusion

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  start_all.ps1
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  labels.yml  release.yml  test.yml
cloud/api/: Dockerfile  go.mod  main.go  openapi.yaml  types.go
cloud/api/handlers/: analysis.go  health.go  reputation.go  status.go  upload.go
cloud/api/middleware/: auth.go  cors.go
cloud/api/uploads/: upload-2366886533
cloud/ml_pipeline/: deployer.py  monitor.py  trainer.py
cloud/sandbox/: Dockerfile  analyzer.go  go.mod  main.go  manager.go  util.go  vm_pool.go
cloud/threat_intel/: Dockerfile  aggregator.go  distribution.go  enrichment.go  go.mod  main.go
common/schemas/: cloud_api.schema.json
core/: Cargo.toml  signatures.txt
core/models/: aegis_ml_weights.json
core/rules/: aegis_default.yar
core/src/: behavior_graph.rs  config.rs  device_monitor.rs  engine.rs  event_processor.rs  http.rs  main.rs  response.rs  scan.rs  service.rs  telemetry.rs  types.rs
core/src/ipc/: cloud_sync.rs  kernel_comm.rs  mod.rs
core/src/ml/: inference.rs  models.rs
core/src/storage/: cache.rs  whitelist.rs
docs/: ARCHITECTURE.md  INSTALL.md  LOCAL_DEV.md  ROADMAP.md
installer/windows/: install_service.ps1  setup.iss  uninstall_service.ps1
kernel/windows/: CMakeLists.txt  build_driver.ps1  install_driver.ps1  query  sign_driver.ps1  uninstall_driver.ps1
kernel/windows/driver/: aegis_driver.c
kernel/windows/inc/: aegis_common.h  ioctl_codes.h
ml/: behavior_graph_analyzer.py  requirements.txt
ml/models/: behavior_lstm.py  ensemble.py  network_transformer.py  static_cnn.py
ml/training/: Dockerfile  main.py
tools/: add_go_path.ps1  build_all.sh  install_go.ps1  install_wdk.ps1  test_signature.ps1
ui/: index.html  package-lock.json  package.json  tailwind.config.cjs
ui/src/: App.tsx  main.tsx
ui/src/components/: Dashboard.tsx  Quarantine.tsx  Settings.tsx  SystemHealth.tsx  ThreatExplorer.tsx
ui/src/services/: api.ts
ui/src/styles/: globals.css
